# dsd-util

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
src/: commands.rs  deployer.rs  lib.rs  main.rs  printer.rs  utils.rs
